--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      * {
+        margin: 0;
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
     <canvas></canvas>
+    <script src="./script.js"></script>
   </body>
 </html>
