--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <style>
       * {
         margin: 0;
+        padding: 0;
+        overflow: hidden;
       }
     </style>
     <title>Document</title>
