--- a/index.html
+++ b/index.html
@@ -3,17 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
+    <main id="title">
+      <h1>Asteroid Game</h1>
+      <p>Created by Kevin Farukh</p>
+    </main>
+    <div class="form-container">
+      <form id="form">
+        <label for="speed">Speed</label>
+        <input
+          id="speed"
+          type="range"
+          min="1"
+          max="10"
+          name=""
+          id=""
+          placeholder="speed"
+          value="3"
+        />
+        <label for="rotation">Rotation</label>
+        <input
+          id="rotation"
+          type="range"
+          min="1"
+          max="10"
+          name=""
+          id=""
+          value="4"
+        />
+
+        <label for="projectile_speed">Projectile speed</label>
+        <input
+          id="projectile_speed"
+          type="range"
+          min="1"
+          max="10"
+          name=""
+          id=""
+          placeholder="speed"
+          value="4"
+        />
+        <button type="submit">Change</button>
+      </form>
+    </div>
     <canvas></canvas>
     <script src="./script.js"></script>
+    <script src="./text.js"></script>
   </body>
 </html>
